--- a/components/jcf2/Ui/Settings/frFiles.lfm
+++ b/components/jcf2/Ui/Settings/frFiles.lfm
@@ -5,47 +5,48 @@ object fFiles: TfFiles
   Width = 395
   ClientHeight = 281
   ClientWidth = 395
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   OnResize = FrameResize
   DesignLeft = 495
   DesignTop = 342
   object lblStatus: TLabel
     Left = 8
-    Height = 16
+    Height = 15
     Top = 56
-    Width = 51
+    Width = 45
     Caption = 'lblStatus'
     ParentColor = False
   end
   object lblDate: TLabel
     Left = 8
-    Height = 16
+    Height = 15
     Top = 78
-    Width = 41
+    Width = 37
     Caption = 'lblDate'
     ParentColor = False
   end
   object lblVersion: TLabel
     Left = 8
-    Height = 16
+    Height = 15
     Top = 102
-    Width = 56
+    Width = 52
     Caption = 'lblVersion'
     ParentColor = False
   end
   object lblDescription: TLabel
     Left = 8
-    Height = 16
+    Height = 15
     Top = 128
-    Width = 70
+    Width = 63
     Caption = 'Description:'
     ParentColor = False
   end
   object lblSettingsFileName: TLabel
     Left = 8
-    Height = 16
+    Height = 15
     Top = 35
-    Width = 117
+    Width = 105
     Caption = 'lblSettingsFileName'
     ParentColor = False
   end
@@ -58,15 +59,15 @@ object fFiles: TfFiles
   end
   object cbConfirmFormat: TCheckBox
     Left = 8
-    Height = 23
+    Height = 19
     Top = 2
-    Width = 253
+    Width = 231
     Caption = 'Show confirmation dialog before format'
     TabOrder = 0
   end
   object edFormatFile: TEdit
     Left = 128
-    Height = 33
+    Height = 23
     Top = 32
     Width = 152
     Color = clBtnFace
@@ -75,12 +76,41 @@ object fFiles: TfFiles
   end
   object bOpenFolder: TButton
     Left = 296
-    Height = 32
+    Height = 25
     Top = 31
-    Width = 83
+    Width = 89
     AutoSize = True
     Caption = 'Open folder'
     TabOrder = 3
     OnClick = bOpenFolderClick
+  end
+  object bImport: TButton
+    AnchorSideLeft.Control = bOpenFolder
+    AnchorSideTop.Control = edFormatFile
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Side = asrBottom
+    Left = 296
+    Height = 25
+    Top = 61
+    Width = 71
+    AutoSize = True
+    BorderSpacing.Top = 6
+    Caption = 'Import...'
+    TabOrder = 4
+    OnClick = bImportClick
+  end
+  object bExport: TButton
+    AnchorSideLeft.Control = bImport
+    AnchorSideTop.Control = bImport
+    AnchorSideTop.Side = asrBottom
+    Left = 296
+    Height = 25
+    Top = 92
+    Width = 68
+    AutoSize = True
+    BorderSpacing.Top = 6
+    Caption = 'Export...'
+    TabOrder = 5
+    OnClick = bExportClick
   end
 end
